--- a/layouts/page/about-cn.html
+++ b/layouts/page/about-cn.html
@@ -45,6 +45,7 @@ function init() {
 <!-- Todo merge zh and en with single layout with diff i18 front matter  -->
 <!-- TODO: video  -->
 <section class="about-intro-video">
+  <div class="overlay"></div>
   <div class="container">
     <video class="video" src="">
     </video>
