--- a/src/less/base.less
+++ b/src/less/base.less
@@ -96,10 +96,35 @@
   animation: @animation_attrs;
 }
 
+// fadeIn
+@keyframes fadeIn {
+  0% {
+    opacity: 0;
+  }
+
+  100% {
+    opacity: 1;
+  }
+}
+
+//fadeInUp
 @keyframes fadeInUp {
   0% {
     opacity: 0;
     transform: translateY(1em);
+  }
+
+  100% {
+    opacity: 1;
+    transform: none;
+  }
+}
+
+// fadeInDown
+@keyframes fadeInDown {
+  0% {
+    opacity: 0;
+    transform: translate3d(0, -100%, 0);
   }
 
   100% {
@@ -133,9 +158,9 @@ textarea {
   outline: none;
 }
 
-ul li {
-  list-style: none;
-}
+// ul li {
+//   list-style: none;
+// }
 
 a,
 p a {
