--- a/src/less/doc.less
+++ b/src/less/doc.less
@@ -73,116 +73,116 @@
         font-weight: 400;
         color: @text_color;
       }
-
-      b,
-      optgroup,
-      strong {
-        font-weight: 600;
-      }
-
-      legend,
-      pre {
-        display: block;
-        color: #333;
-      }
-      code,
-      kbd,
-      pre,
-      samp {
-        font-family: Menlo, Monaco, Consolas, 'Courier New', monospace;
-      }
-      code,
-      kbd {
-        padding: 2px 4px;
-        font-size: 90%;
-      }
-      code {
-        color: @code_color;
-        background: @code_bg_color;
-        border-radius: 4px;
-      }
-      pre {
-        margin: 0.7rem 0;
-        padding: @pre_padding;
-        background-color: @gray_white;
-        border: 1px solid #ccc;
-        font-size: 0.7rem;
-        line-height: 1.43;
-        .rounded-corners(4px);
-        .f-brk;
-        overflow: auto;
-        code {
-          color: inherit;
-          background: none;
-        }
-      }
-
-      table {
-        display: block;
-        max-width: 100%;
-        border-spacing: 0;
-        border-collapse: collapse;
-        border-spacing: 2px;
-        margin-bottom: 10px;
-        font-size: 0.7rem;
-        overflow: auto;
-        thead {
-          display: table-header-group;
-          vertical-align: middle;
-          border-color: inherit;
-        }
-        tbody {
-          display: table-row-group;
-          vertical-align: middle;
-          border-color: inherit;
-        }
-        th,
-        td {
-          padding: 6px 13px;
-          border: 1px solid #dfe2e5;
-        }
-        th {
-          font-weight: 600;
-        }
-        tr {
-          background-color: white;
-          border-top: 1px solid #c6cbd1;
-        }
-        tr:nth-child(2n) {
-          background-color: #f6f8fa;
-        }
-      }
-      ol,
-      ul {
-        padding-left: 1.5rem;
-        color: @text_color;
-        p {
-          padding-left: 5px;
-          margin: 2px 0;
-        }
-      }
-      ul li {
-        list-style-type: disc;
-      }
-      blockquote {
-        margin: 1rem 0;
-        padding: @horizontal_padding;
-        background-color: #ecf7ff;
-        .rounded-corners();
-        border-left: 3px solid #9ecef1;
-        p {
-          margin: 0;
-          color: #142848;
-        }
+      a {
+        color: @theme_blue;
       }
       img {
         display: block;
         max-width: 100%;
         margin: auto;
       }
-      a {
-        color: @theme_blue;
-      }
+      //
+      // b,
+      // optgroup,
+      // strong {
+      //   font-weight: 600;
+      // }
+      //
+      // legend,
+      // pre {
+      //   display: block;
+      //   color: #333;
+      // }
+      // code,
+      // kbd,
+      // pre,
+      // samp {
+      //   font-family: Menlo, Monaco, Consolas, 'Courier New', monospace;
+      // }
+      // code,
+      // kbd {
+      //   padding: 2px 4px;
+      //   font-size: 90%;
+      // }
+      // code {
+      //   color: @code_color;
+      //   background: @code_bg_color;
+      //   border-radius: 4px;
+      // }
+      // pre {
+      //   margin: 0.7rem 0;
+      //   padding: @pre_padding;
+      //   background-color: @gray_white;
+      //   border: 1px solid #ccc;
+      //   font-size: 0.7rem;
+      //   line-height: 1.43;
+      //   .rounded-corners(4px);
+      //   .f-brk;
+      //   overflow: auto;
+      //   code {
+      //     color: inherit;
+      //     background: none;
+      //   }
+      // }
+      //
+      // table {
+      //   display: block;
+      //   max-width: 100%;
+      //   border-spacing: 0;
+      //   border-collapse: collapse;
+      //   border-spacing: 2px;
+      //   margin-bottom: 10px;
+      //   font-size: 0.7rem;
+      //   overflow: auto;
+      //   thead {
+      //     display: table-header-group;
+      //     vertical-align: middle;
+      //     border-color: inherit;
+      //   }
+      //   tbody {
+      //     display: table-row-group;
+      //     vertical-align: middle;
+      //     border-color: inherit;
+      //   }
+      //   th,
+      //   td {
+      //     padding: 6px 13px;
+      //     border: 1px solid #dfe2e5;
+      //   }
+      //   th {
+      //     font-weight: 600;
+      //   }
+      //   tr {
+      //     background-color: white;
+      //     border-top: 1px solid #c6cbd1;
+      //   }
+      //   tr:nth-child(2n) {
+      //     background-color: #f6f8fa;
+      //   }
+      // }
+      // ol,
+      // ul {
+      //   padding-left: 1.5rem;
+      //   color: @text_color;
+      //   p {
+      //     padding-left: 5px;
+      //     margin: 2px 0;
+      //   }
+      // }
+      // ul li {
+      //   list-style-type: disc;
+      // }
+      // blockquote {
+      //   margin: 1rem 0;
+      //   padding: @horizontal_padding;
+      //   background-color: #ecf7ff;
+      //   .rounded-corners();
+      //   border-left: 3px solid #9ecef1;
+      //   p {
+      //     margin: 0;
+      //     color: #142848;
+      //   }
+      // }
 
       .figure {
         .caption {
