--- a/src/less/nav.less
+++ b/src/less/nav.less
@@ -9,14 +9,19 @@
 //width
 @nav_tags_width: 15rem;
 
-// animation_attrs
-@animation_attrs: fadeInUp 1s;
+// animation_fadein_up
+@animation_fadein_up: fadeInUp 1s;
 
 .nav-tree,
 .nav-tags {
   width: @nav_tags_width;
   padding-right: @horizontal_padding;
-  .customAnimation(@animation_attrs);
+  .customAnimation(@animation_fadein_up);
+
+  ul li {
+    list-style: none;
+  }
+
   .title {
     display: flex;
     align-items: baseline;
