--- a/src/less/list.less
+++ b/src/less/list.less
@@ -11,7 +11,8 @@
     .article {
       position: relative;
       .title {
-        margin: 25px 0 15px;
+        // margin: 25px 0 15px;
+        margin-bottom: 1rem;
         font-family: 'TitilliumWeb';
         font-size: 1.2rem;
         font-weight: 400;
