feat: replace content  about the founders to community  for about english page

--- a/layouts/page/about.html
+++ b/layouts/page/about.html
@@ -61,11 +61,12 @@ function init() {
 </section>
 <section class="about-founders">
   <div class="container">
-    <h1 class="title">ABOUT THE FOUNDERS</h1>
+    <h1 class="title">COMMUNITY</h1>
     <div class="desc">
-        Max Liu: Co-founder and CEO, a hacker with a free soul
-        <br> Edward Huang: Co-founder and CTO, an open-source fanatic
-        <br> Dylan Cui: Co-founder, an open-source fancier
+        Twitter: <a href="https://twitter.com/PingCAP" target="_blank">@PingCAP</a>
+        <br>Mailing List: <a href="https://groups.google.com/forum/#!forum/tidb-user" target="_blank">Google Group</a>
+        <br>Reddit: <a href="https://www.reddit.com/r/TiDB/" target="_blank">https://www.reddit.com/r/TiDB/</a>
+        <br>Stack Overflow: <a href="https://stackoverflow.com/questions/tagged/tidb" target="_blank">https://stackoverflow.com/questions/tagged/tidb</a>
     </div>
     <div class="image-wrap">
         <img src="https://download.pingcap.com/images/illustration-tidb.png" alt="">
