--- a/src/less/about.less
+++ b/src/less/about.less
@@ -58,6 +58,10 @@ section[class^='meetup-landingpage-'] {
     font-size: 0.8rem;
     line-height: 1.7;
     color: @font_color;
+
+    a {
+      color: @theme_blue;
+    }
   }
 
   .link {
