feat: update sidebar for docs and docs-cn

--- a/layouts/blog/single.html
+++ b/layouts/blog/single.html
@@ -25,15 +25,7 @@
         <div class="blog-text">{{ .Content }}</div>
       </div>
 
-      <div class="operate">
-        <div class="row">
-          <div class="item">
-            <a href="https://www.facebook.com/sharer.php?u=http%3a%2f%2fwww.pingcap.com%2f$url$">
-              <i class="icon">{{ partial "svgs/icon-share.svg" (dict "fill" "#040000" "width" 22 "height" 22 ) }}</i><span>Share</span>
-            </a>
-          </div>
-        </div>
-      </div>
+      {{ partial "archives/operate-links.html" (dict "global" .) }}
     </div>
   </div>
 </div>
