--- a/layouts/docs/list.html
+++ b/layouts/docs/list.html
@@ -10,41 +10,17 @@
     <div class="container">
         <div class="nav nav-tree">
             <h1 class="title"> Document </h1>
-            <div class="st_tree" id="st-tree">
-                {{ partial "navs/tree-nav.html" (dict "tree" .Site.Data.docs_toc "global" .) }}
+            <div class="st_tree nav-tree-toc" style="display: none;">
+              {{ partial "navs/tree-nav.html" (dict "tree" .Site.Data.docs_toc "global" .) }}
             </div>
         </div>
 
         <div class="archive">
-            <div class="content">
-              {{ with .Site.GetPage "page" "docs/overview.md" }}{{.Content}}{{ end }}
-            </div>
+          <div class="content">
+            {{ with .Site.GetPage "page" "docs/overview.md" }}{{.Content}}{{ end }}
+          </div>
 
-            <div class="draw">
-                <img src="https://download.pingcap.com/images/docs-simple.png" width="100%">
-            </div>
-            <div class="operate">
-                <div class="item">
-                    <a href="https://www.facebook.com/sharer.php?u=http%3a%2f%2fwww.pingcap.com%2f$url$">
-                      <i class="icon">{{ partial "svgs/icon-share.svg" (dict "fill" "#040000" "width" 22 "height" 22 ) }}</i><span>Share</span>
-                    </a>
-                </div>
-                <div class="item" onclick="window.print();">
-                    <a href="javascript:;">
-                      <i class="icon">{{ partial "svgs/icon-print.svg" (dict "fill" "#040000" "width" 22 "height" 22 ) }}</i><span>Print</span>
-                    </a>
-                </div>
-                <div class="item">
-                    <a href="http://download.pingcap.org/tidb-manual-en.pdf?v={{ now.Unix }}" download="tidb-manual-en.pdf">
-                      <i class="icon">{{ partial "svgs/icon-download.svg" (dict "fill" "#040000" "width" 22 "height" 22 ) }}</i><span>Download</span>
-                    </a>
-                </div>
-                <div class="item">
-                    <a href="mailto:info@pingcap.com">
-                      <i class="icon icon-mail">{{ partial "svgs/icon-feedback.svg" (dict "fill" "#040000" "width" 22 "height" 17 ) }}</i><span>Feedback</span>
-                    </a>
-                </div>
-            </div>
+          {{ partial "archives/operate-links.html" (dict "global" .) }}
         </div>
     </div>
 </div>
