--- a/src/less/doc.less
+++ b/src/less/doc.less
@@ -20,34 +20,31 @@
 .weekly,
 .meetup,
 .recruit {
-  padding: calc(~'1rem + @{header_height}') @horizontal_padding 2rem;
-  min-height: calc(~'100vh - @{header_height}');
+  padding: 0 @horizontal_padding;
+
   .container {
     flex-flow: row wrap;
   }
 
-  .nav,
-  .list,
+  // .nav,
   .archive {
     margin-top: 2rem;
   }
 
   .list,
   .archive {
-    flex-basis: 65%;
-    overflow: auto;
+    flex-basis: 68%;
+    margin-left: 2%;
 
     h1,
     h2,
     h3,
     h4 {
-      margin-bottom: 1rem;
-      // margin: 1.8rem 0 1rem;
       font-weight: 400;
       color: @title_color;
     }
-
     h1 {
+      margin: 1.5rem 0;
       font-size: 1.2rem;
     }
     h2 {
@@ -81,114 +78,6 @@
         max-width: 100%;
         margin: auto;
       }
-      //
-      // b,
-      // optgroup,
-      // strong {
-      //   font-weight: 600;
-      // }
-      //
-      // legend,
-      // pre {
-      //   display: block;
-      //   color: #333;
-      // }
-      // code,
-      // kbd,
-      // pre,
-      // samp {
-      //   font-family: Menlo, Monaco, Consolas, 'Courier New', monospace;
-      // }
-      // code,
-      // kbd {
-      //   padding: 2px 4px;
-      //   font-size: 90%;
-      // }
-      // code {
-      //   color: @code_color;
-      //   background: @code_bg_color;
-      //   border-radius: 4px;
-      // }
-      // pre {
-      //   margin: 0.7rem 0;
-      //   padding: @pre_padding;
-      //   background-color: @gray_white;
-      //   border: 1px solid #ccc;
-      //   font-size: 0.7rem;
-      //   line-height: 1.43;
-      //   .rounded-corners(4px);
-      //   .f-brk;
-      //   overflow: auto;
-      //   code {
-      //     color: inherit;
-      //     background: none;
-      //   }
-      // }
-      //
-      // table {
-      //   display: block;
-      //   max-width: 100%;
-      //   border-spacing: 0;
-      //   border-collapse: collapse;
-      //   border-spacing: 2px;
-      //   margin-bottom: 10px;
-      //   font-size: 0.7rem;
-      //   overflow: auto;
-      //   thead {
-      //     display: table-header-group;
-      //     vertical-align: middle;
-      //     border-color: inherit;
-      //   }
-      //   tbody {
-      //     display: table-row-group;
-      //     vertical-align: middle;
-      //     border-color: inherit;
-      //   }
-      //   th,
-      //   td {
-      //     padding: 6px 13px;
-      //     border: 1px solid #dfe2e5;
-      //   }
-      //   th {
-      //     font-weight: 600;
-      //   }
-      //   tr {
-      //     background-color: white;
-      //     border-top: 1px solid #c6cbd1;
-      //   }
-      //   tr:nth-child(2n) {
-      //     background-color: #f6f8fa;
-      //   }
-      // }
-      // ol,
-      // ul {
-      //   padding-left: 1.5rem;
-      //   color: @text_color;
-      //   p {
-      //     padding-left: 5px;
-      //     margin: 2px 0;
-      //   }
-      // }
-      // ul li {
-      //   list-style-type: disc;
-      // }
-      // blockquote {
-      //   margin: 1rem 0;
-      //   padding: @horizontal_padding;
-      //   background-color: #ecf7ff;
-      //   .rounded-corners();
-      //   border-left: 3px solid #9ecef1;
-      //   p {
-      //     margin: 0;
-      //     color: #142848;
-      //   }
-      // }
-
-      .figure {
-        .caption {
-          display: none;
-        }
-      }
 
       .blog-post-meta {
         padding-left: 0;
@@ -215,7 +104,7 @@
       margin: 2rem 0 1rem;
     }
     .operate {
-      margin-top: 2rem;
+      margin: 1.6rem 0;
       border-top: 2px solid #000;
       display: flex;
       flex-flow: row wrap;
@@ -234,9 +123,14 @@
     }
   }
 
+  .markdown-body h2 {
+    border-bottom: none;
+  }
+
   .improve-doc {
     display: flex;
-    margin: 1rem 0;
+    justify-content: flex-end;
+    margin: 1.2rem 0;
     color: @theme_blue;
     font-size: 0.7rem;
 
