feat: change sidebar for recruit/recruit-cn

--- a/layouts/recruit-cn/single.html
+++ b/layouts/recruit-cn/single.html
@@ -9,7 +9,7 @@
   <div class="container">
     <div class="nav nav-tree">
         <h1 class="title"> 招聘职位 </h1>
-         <div class="st_tree">
+         <div class="st_tree nav-tree-toc" style="display: none;">
            {{ partial "navs/tree-nav.html" (dict "tree" .Site.Data.recruit_cn_toc "global" .) }}
          </div>
     </div>
