feat: update simpleTree for  hash compatible

--- a/layouts/partials/navs/tree-nav.html
+++ b/layouts/partials/navs/tree-nav.html
@@ -6,7 +6,7 @@
       </li>
     {{else}}
     <li class="leaf-child">
-      <a href="{{ .link | urlize }}">{{ .name }}</a>
+      <a href="{{ .link }}">{{ .name }}</a>
     </li>
     {{end}}
   {{end}}
