feat： add sticky-bar for docs docs-cn etc.

--- a/layouts/docs-cn/single.html
+++ b/layouts/docs-cn/single.html
@@ -10,7 +10,7 @@
 {{ define "main" }}
 <div class="doc">
   <div class="container">
-    <div class="nav nav-tree">
+    <div class="nav nav-tree sticky-sidebar">
       <h1 class="title"> 文档 </h1>
       <div class="st_tree nav-tree-toc" style="display: none;">
         {{ partial "navs/tree-nav.html" (dict "tree" .Site.Data.docs_cn_toc "global" .) }}
