--- a/layouts/meetup/single.html
+++ b/layouts/meetup/single.html
@@ -7,9 +7,9 @@
 <div class="meetup">
   <div class="container">
 
-    <div class="nav nav-tree" id="st-tree">
+    <div class="nav nav-tree sticky-sidebar">
       <h1 class="title"> 干货实录 </h1>
-      <div class="st_tree" id="doc-nav">
+      <div class="st_tree">
         {{ $blogs := where (where .Site.Pages "Section" "meetup") ".Params.title" "!=" nil }}
         {{ partial "navs/date-tree-nav.html" (dict "data" $blogs) }}
       </div>
