--- a/layouts/partials/navs/date-tree-nav.html
+++ b/layouts/partials/navs/date-tree-nav.html
@@ -1,6 +1,6 @@
 {{ $rss := .rss }}
 
-<div class="nav nav-tree">
+<div class="nav nav-tree sticky-sidebar">
     <h1 class="title">
       {{ .title }}
       {{ if $rss }}
