--- a/layouts/recruit-cn/single.html
+++ b/layouts/recruit-cn/single.html
@@ -7,7 +7,7 @@
 {{ define "main" }}
 <div class="recruit">
   <div class="container">
-    <div class="nav nav-tree">
+    <div class="nav nav-tree sticky-sidebar">
         <h1 class="title"> 招聘职位 </h1>
          <div class="st_tree nav-tree-toc" style="display: none;">
            {{ partial "navs/tree-nav.html" (dict "tree" .Site.Data.recruit_cn_toc "global" .) }}
