--- a/src/less/doc.less
+++ b/src/less/doc.less
@@ -21,12 +21,13 @@
 .meetup,
 .recruit {
   padding: 0 @horizontal_padding;
+  min-height: calc(~'100vh - 257px');
 
   .container {
     flex-flow: row wrap;
   }
 
-  // .nav,
+  .list,
   .archive {
     margin-top: 2rem;
   }
@@ -45,7 +46,7 @@
       color: @title_color;
     }
     h1 {
-      margin: 1.5rem 0;
+      margin-bottom: 1.5rem;
       font-size: 1.2rem;
     }
     h2 {
