--- a/layouts/recruit/single.html
+++ b/layouts/recruit/single.html
@@ -6,25 +6,25 @@
 {{ define "main" }}
 <div class="recruit">
   <div class="container">
-    <div class="nav nav-tree">
-        <h1 class="title"> 招聘职位 </h1>
-        <div class="st_tree nav-tree-toc" style="display: none;">
-          {{ partial "navs/tree-nav.html" (dict "tree" .Site.Data.recruit_toc "global" .) }}
-        </div>
-    </div>
-
-    <div class="archive">
-        <div class="content">{{ .Content }}</div>
-        <div class="operate">
-          <div class="item">
-            <a href="mailto:hire@pingcap.com">
-              <i class="icon icon-mail">
-                {{ partial "svgs/icon-feedback.svg" (dict "fill" "#040000" "width" 22 "height" 17 ) }}
-              </i>投个简历吧
-            </a>
+      <div class="nav nav-tree sticky-sidebar">
+          <h1 class="title"> 招聘职位 </h1>
+          <div class="st_tree nav-tree-toc" style="display: none;">
+            {{ partial "navs/tree-nav.html" (dict "tree" .Site.Data.recruit_toc "global" .) }}
           </div>
-        </div>
-    </div>
+      </div>
+
+      <div class="archive">
+          <div class="content">{{ .Content }}</div>
+          <div class="operate">
+            <div class="item">
+              <a href="mailto:hire@pingcap.com">
+                <i class="icon icon-mail">
+                  {{ partial "svgs/icon-feedback.svg" (dict "fill" "#040000" "width" 22 "height" 17 ) }}
+                </i>投个简历吧
+              </a>
+            </div>
+          </div>
+      </div>
   </div>
 </div>
 
