--- a/src/less/footer.less
+++ b/src/less/footer.less
@@ -8,7 +8,7 @@
 /** add ellipsis in a line **/
 .footer {
   width: 100%;
-  padding: 3rem 0;
+  padding: 2rem 0;
   background-color: @bg_black_with_alpha90;
   color: @white;
 
@@ -25,7 +25,7 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    margin-top: 1.25rem;
+    // margin-top: 1.25rem;
   }
 
   .left {
