--- a/src/less/nav.less
+++ b/src/less/nav.less
@@ -23,13 +23,6 @@
     list-style: none;
   }
 
-  // .sticky-nav {
-  //   position: -webkit-sticky;
-  //   position: sticky;
-  //   top: 75px;
-  // }
-  //
-
   .title {
     display: flex;
     align-items: baseline;
@@ -173,5 +166,17 @@
         border-left: 4px solid @theme_blue;
       }
     }
+  }
+}
+
+/* The sticky */
+@media (min-width: 600px) {
+  .sticky-sidebar {
+    position: -webkit-sticky;
+    position: sticky;
+    top: 40px;
+    flex: 1;
+    align-self: flex-start;
+    background-color: #fff;
   }
 }
