polish: fix flex-basis in sticky-sidebar and archive

--- a/src/less/doc.less
+++ b/src/less/doc.less
@@ -34,7 +34,8 @@
 
   .list,
   .archive {
-    flex-basis: 68%;
+    // flex-basis: 68%;
+    flex: 3;
     margin-left: 2%;
     overflow: auto;
 
