--- a/src/less/nav.less
+++ b/src/less/nav.less
@@ -174,8 +174,9 @@
   .sticky-sidebar {
     position: -webkit-sticky;
     position: sticky;
-    top: 40px;
+    top: 50px;
+    flex: 1;
     align-self: flex-start;
-    background-color: #fff;
+    // background-color: #f2f2f2;
   }
 }
