chores: remove auryc statistics code

--- a/layouts/partials/head/ga.html
+++ b/layouts/partials/head/ga.html
@@ -1,55 +1,13 @@
 <!-- Google Analytics -->
 <script>
-window.ga = window.ga || function() {
-  (ga.q = ga.q || []).push(arguments)
-};
-ga.l = +new Date;
-ga('create', 'UA-99991864-4', 'auto');
-ga('send', 'pageview');
+window.ga =
+  window.ga ||
+  function() {
+    ;(ga.q = ga.q || []).push(arguments)
+  }
+ga.l = +new Date()
+ga('create', 'UA-99991864-4', 'auto')
+ga('send', 'pageview')
 </script>
 <script async src='https://download.pingcap.com/js/ga-analytics.js'></script>
 <!-- End Google Analytics -->
-<script data-cfasync="false" charset="utf-8">
-;
-(function(g) {
-  g.aurycReadyCb = g.aurycReadyCb || [];
-  var d = document,
-    i, am = d.createElement("script"),
-    h = d.head || d.getElementsByTagName("head")[0],
-    aex = {
-      "src": "//cdn.userty.com/114-pingcapcom/container.js",
-      "data-cfasync": "false",
-      "async": "true",
-      "defer": "true",
-      "data-vendor": "userty",
-      "data-role": "container",
-      "charset": "utf-8"
-    };
-  for (var attr in aex) {
-    am.setAttribute(attr, aex[attr]);
-  }
-  h.appendChild(am);
-})(window);
-</script>
-<script>
-function _integrate() {
-  window.auryc.getReplayUrl(function(replayUrl) {
-    window.ga('send', {
-      hitType: 'event',
-      eventCategory: 'Auryc',
-      eventAction: replayUrl
-    });
-  });
-}
-
-function aurycIntegrate() {
-  if (window.ga && window.auryc && window.auryc.getReplayUrl) {
-    _integrate();
-  } else {
-    setTimeout(function() {
-      aurycIntegrate();
-    }, 1000);
-  }
-}
-aurycIntegrate();
-</script>
