--- a/layouts/docs-cn/single.html
+++ b/layouts/docs-cn/single.html
@@ -25,6 +25,8 @@
         {{ partial "improve-doc.html" (dict "repo" "docs-cn" "global" . "isCn" "true") }}
         {{ partial "archives/operate-links.html" (dict "global" . "isCn" "true") }}
     </div>
+
+    <div id="smarttoc_wrapper" class="sticky-sidebar"></div>
   </div>
 </div>
 
