--- a/src/less/index.less
+++ b/src/less/index.less
@@ -3,6 +3,16 @@
 @import './header.less';
 @import './footer.less';
 
+#smarttoc-extender {
+  display: none !important;
+}
+#smarttoc {
+  position: relative !important;
+  left: initial !important;
+  top: 50px !important;
+  transform: initial !important;
+}
+
 // width
 @logo_width: 10.5rem;
 
