--- a/src/less/nav.less
+++ b/src/less/nav.less
@@ -10,13 +10,16 @@
 //width
 @nav_tags_width: 15rem;
 
+// height
+@nav_height: 2rem;
+@header_height: calc(~'1rem + @{nav_height} + 3px');
+
 // animation_fadein_up
 @animation_fadein_up: fadeInUp 1s;
 
 .nav-tree,
 .nav-tags {
   width: @nav_tags_width;
-  padding: 2rem @horizontal_padding;
   .customAnimation(@animation_fadein_up);
 
   ul li {
@@ -174,9 +177,8 @@
   .sticky-sidebar {
     position: -webkit-sticky;
     position: sticky;
-    top: 50px;
+    top: @header_height;
     flex: 1;
     align-self: flex-start;
-    // background-color: #f2f2f2;
   }
 }
