feat: add video and particles animation for about-cn

--- a/layouts/page/about-cn.html
+++ b/layouts/page/about-cn.html
@@ -42,14 +42,14 @@ function init() {
 {{ end }}
 
 {{ define "main" }}
-<!-- Todo merge zh and en with single layout with diff i18 front matter  -->
-<!-- TODO: video  -->
-<section class="about-intro-video">
-  <div class="overlay"></div>
-  <div class="container">
-    <video class="video" src="">
+
+<section class="intro-video">
+  {{ partial "particles.html" }}
+    <video id="video" controls="controls" preload="auto" poster="https://download.pingcap.com/images/poster.png">
+      <source src="https://download.pingcap.com/videos/PingCAP-intro.mp4"
+          type='video/mp4;codecs="avc1.42E01E, mp4a.40.2"'/>
+          Your browser dosen't support
     </video>
-  </div>
 </section>
 <section class="about-company">
   <div class="container">
