polish: change max-width for container and fix smart-toc style

--- a/layouts/docs-cn/list.html
+++ b/layouts/docs-cn/list.html
@@ -20,8 +20,11 @@
       <div class="content">
         {{ with .Site.GetPage "page" "docs-cn/overview.md" }}{{.Content}}{{ end }}
       </div>
+      <div class="article-toc"></div>
       {{ partial "archives/operate-links.html" (dict "global" . "isCn" "true") }}
     </div>
+
+    <div id="smarttoc_wrapper" class="sticky-sidebar"></div>
   </div>
 </div>
 {{ end }}
