--- a/layouts/docs/list.html
+++ b/layouts/docs/list.html
@@ -19,9 +19,11 @@
           <div class="content">
             {{ with .Site.GetPage "page" "docs/overview.md" }}{{.Content}}{{ end }}
           </div>
-
+          <div class="article-toc"></div>
           {{ partial "archives/operate-links.html" (dict "global" .) }}
         </div>
+
+        <div id="smarttoc_wrapper" class="sticky-sidebar"></div>
     </div>
 </div>
 {{ end }}
