--- a/src/less/nav.less
+++ b/src/less/nav.less
@@ -14,13 +14,12 @@
 @nav_height: 2rem;
 @header_height: calc(~'1rem + @{nav_height} + 3px');
 
-// animation_fadein_up
-@animation_fadein_up: fadeInUp 1s;
+// animation_fadein_400
+@animation_fadein_400: fadeIn 0.4s;
 
 .nav-tree,
 .nav-tags {
   width: @nav_tags_width;
-  .customAnimation(@animation_fadein_up);
 
   ul li {
     list-style: none;
@@ -92,6 +91,7 @@
   .st_tree {
     width: 100%;
     padding-left: 0;
+    .customAnimation(@animation_fadein_400);
 
     ul {
       padding-left: 0.8rem;
