--- a/layouts/docs/single.html
+++ b/layouts/docs/single.html
@@ -26,6 +26,8 @@
         {{ partial "improve-doc.html" (dict "repo" "docs" "global" .) }}
         {{ partial "archives/operate-links.html" (dict "global" .) }}
     </div>
+
+    <div id="smarttoc_wrapper" class="sticky-sidebar"></div>
   </div>
 </div>
 
