--- a/src/less/base.less
+++ b/src/less/base.less
@@ -72,7 +72,7 @@
 @bg_black_with_alpha90: fade(black, 90%);
 
 // width
-@max_width_pc: 51rem;
+@max_width_pc: 1288px;
 
 // box
 @box_size: border-box;
