--- a/layouts/page/about-cn.html
+++ b/layouts/page/about-cn.html
@@ -45,11 +45,14 @@ function init() {
 
 <section class="intro-video">
   {{ partial "particles.html" }}
-    <video id="video" controls="controls" preload="auto" poster="https://download.pingcap.com/images/poster.png">
+    <video id="video" poster="https://download.pingcap.com/images/poster.jpg">
       <source src="https://download.pingcap.com/videos/PingCAP-intro.mp4"
           type='video/mp4;codecs="avc1.42E01E, mp4a.40.2"'/>
           Your browser dosen't support
     </video>
+    <div id="video-button">
+      {{ partial "svgs/icon-play-button.svg" (dict "fill" "#fff" "width" 42 "height" 42 ) }}
+    </div>
 </section>
 <section class="about-company">
   <div class="container">
