--- a/src/less/about.less
+++ b/src/less/about.less
@@ -11,6 +11,9 @@
 // line
 @1px_hr_width: 1.9rem;
 
+// animation_fadein
+@animation_fadein: fadeIn 0.4s;
+
 section[class^='about-'],
 section[class^='meetup-landingpage-'] {
   padding: @vertical_padding @horizontal_padding;
@@ -99,13 +102,24 @@ section[class^='meetup-landingpage-'] {
     transform: translate(-50%, -50%);
     width: 924px;
     height: 520px;
+    box-shadow: 2px 2px 22px rgba(255, 255, 255, 0.5);
     background: transparent
-      url('https://download.pingcap.com/images/poster.png') no-repeat 0 0;
+      url('https://download.pingcap.com/images/poster.jpg') no-repeat 0 0;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
     background-size: cover;
     z-index: auto;
+    .customAnimation(@animation_fadein);
+  }
+
+  #video-button {
+    position: absolute;
+    width: 42px;
+    height: 42px;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
   }
 }
 
