--- a/layouts/partials/head/meta.html
+++ b/layouts/partials/head/meta.html
@@ -1,6 +1,6 @@
-<link rel="icon" href="images/favicon.ico" type="image/x-icon">
-<link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
-<link rel="apple-touch-icon" href="images/apple-touch-icon.png">
+<link rel="icon" href="/images/favicon.ico" type="image/x-icon">
+<link rel="shortcut icon" href="/images/favicon.ico" type="image/x-icon">
+<link rel="apple-touch-icon" href="/images/apple-touch-icon.png">
 <link rel="canonical" href="https://www.pingcap.com/">
 <link rel="alternate" type="application/rss+xml" title="RSS" href="rss/feed.xml" />
 <!-- 添加 RSS 订阅 -->
