polish: fixed some issues in mobile device

--- a/layouts/partials/mailchimp-js.html
+++ b/layouts/partials/mailchimp-js.html
@@ -2,6 +2,7 @@
 <style type="text/css" media="screen">
     #mc_embed_signup .response {
         margin-top: 10px;
+        font-size: 14px;
     }
 </style>
 <div id="mc_embed_signup">
