--- a/src/less/base.less
+++ b/src/less/base.less
@@ -149,6 +149,8 @@ body,
 body * {
   box-sizing: @box_size;
   margin: 0;
+  -webkit-tap-highlight-color: transparent;
+  -webkit-appearance: none;
 }
 
 input,
@@ -157,10 +159,6 @@ select,
 textarea {
   outline: none;
 }
-
-// ul li {
-//   list-style: none;
-// }
 
 a,
 p a {
