--- a/src/less/footer.less
+++ b/src/less/footer.less
@@ -3,17 +3,16 @@
 //height
 @input_height: 2rem;
 @pingcap_logo_height: 1.8rem;
-@btn_subscribe_width: 4rem;
+@btn_subscribe_width: 4.5rem;
 
 /** add ellipsis in a line **/
 .footer {
   width: 100%;
-  padding: 2rem 0;
+  padding: 1.5rem 0;
   background-color: @bg_black_with_alpha90;
   color: @white;
 
   .container {
-    // display: flex;
     flex-flow: row wrap;
     justify-content: space-around;
     align-items: baseline;
@@ -25,7 +24,7 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    // margin-top: 1.25rem;
+    margin-top: 1.1rem;
   }
 
   .left {
@@ -79,11 +78,17 @@
   .subscribe {
     width: 100%;
     width: 15rem;
-    margin-top: 20px;
-    vertical-align: middle;
+    margin-top: 1.1rem;
+    // vertical-align: middle;
+
+    .form-inline {
+      display: flex;
+      flex-wrap: wrap;
+      align-items: center;
+    }
 
     .form-control {
-      float: left;
+      // float: left;
       width: calc(~'100% - '@btn_subscribe_width);
       height: @input_height;
       background-color: fade(@white, 12%);
@@ -99,13 +104,13 @@
       }
     }
     .btn {
+      // display: block;
       width: @btn_subscribe_width;
       height: @input_height;
+      padding: 0 5px;
       .rounded-corners(0);
       border: none;
       background-color: @theme_blue;
-      font-family: 'TitilliumWeb';
-      font-weight: bold;
       font-size: 0.8rem;
       color: @white;
       &:hover {
@@ -115,6 +120,7 @@
       }
     }
   }
+
   .qr_code_outer {
     position: absolute;
     right: 130px;
