polish: video play/pause

--- a/src/less/about.less
+++ b/src/less/about.less
@@ -120,6 +120,7 @@ section[class^='meetup-landingpage-'] {
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
+    cursor: pointer;
   }
 }
 
@@ -270,9 +271,12 @@ section[class^='meetup-landingpage-'] {
 }
 
 @media (max-width: 600px) {
-  .intro-video #video {
-    width: 100%;
-    height: auto;
+  .intro-video {
+    height: calc(~'100vh - 117px');
+    #video {
+      width: 100%;
+      height: auto;
+    }
   }
   .about-contact .info .row,
   .about-culture .details .row {
