--- a/src/less/header.less
+++ b/src/less/header.less
@@ -161,6 +161,12 @@ header {
     .navigations, .global-search {
       margin-bottom: @horizontal_padding;
     }
+
+    .navigations {
+      ul li {
+        margin: 0;
+      }
+    }
   }
 
   header .container .global-search .search-wrapper.show {
