polish: use js code achieve anchor scroll

--- a/layouts/docs-cn/list.html
+++ b/layouts/docs-cn/list.html
@@ -17,10 +17,11 @@
     </div>
 
     <div class="archive">
-      <div class="content">
+      <div class="content markdown-body">
         {{ with .Site.GetPage "page" "docs-cn/overview.md" }}{{.Content}}{{ end }}
       </div>
       <div class="article-toc"></div>
+      {{ partial "improve-doc.html" (dict "repo" "docs-cn" "global" . "isCn" "true") }}
       {{ partial "archives/operate-links.html" (dict "global" . "isCn" "true") }}
     </div>
 
