--- a/src/less/doc.less
+++ b/src/less/doc.less
@@ -34,7 +34,6 @@
   .archive,
   .nav,
   #smarttoc_wrapper {
-    margin-top: 2rem;
     padding: 1.5rem 0;
     .customAnimation(@animation_fadein);
   }
@@ -114,7 +113,8 @@
       margin: 2rem 0 1rem;
     }
     .operate {
-      margin: 1.6rem 0;
+      margin-top: 1.6rem;
+      // margin: 1.6rem 0;
       border-top: 2px solid #000;
       display: flex;
       flex-flow: row wrap;
@@ -139,9 +139,10 @@
       border-bottom: none;
     }
 
+    h1,
     h2,
     h3 {
-      padding-top: @header_height;
+      padding-top: 1.5rem;
     }
   }
 
@@ -192,6 +193,12 @@
   }
 }
 
+.doc .archive {
+  padding-top: @header_height;
+  // position: relative;
+  // top: @header_height;
+}
+
 // smarttoc-extender global
 #smarttoc-extender {
   display: none !important;
@@ -210,5 +217,9 @@
     .archive {
       flex-basis: 100%;
     }
+  }
+
+  .doc .nav-tree {
+    padding-top: 140px;
   }
 }
