--- a/layouts/docs/list.html
+++ b/layouts/docs/list.html
@@ -16,10 +16,11 @@
         </div>
 
         <div class="archive">
-          <div class="content">
+          <div class="content markdown-body">
             {{ with .Site.GetPage "page" "docs/overview.md" }}{{.Content}}{{ end }}
           </div>
           <div class="article-toc"></div>
+          {{ partial "improve-doc.html" (dict "repo" "docs" "global" .) }}
           {{ partial "archives/operate-links.html" (dict "global" .) }}
         </div>
 
